# sediment

./: .dockerignore  .env.example  .gitignore  IDEA.md  LICENSE  README.md  docker-compose.yml
services/extraction/: Dockerfile  EMBEDDING_DESIGN.md  GRAPH_DESIGN.md  README.md  pyproject.toml
services/extraction/app/: config.py  db.py  embed.py  extract.py  graph_db.py  graph_extract.py  graph_models.py  graph_pipeline.py  graph_resolve.py  models.py  pipeline.py  queue.py  storage.py  worker.py
services/extraction/tests/: test_config.py  test_db.py  test_embed.py  test_extract.py  test_graph_db.py  test_graph_extract.py  test_graph_models.py  test_graph_pipeline.py  test_graph_resolve.py  test_models.py  test_pipeline.py  test_queue.py  test_storage.py  test_worker.py
services/ingestion/: Dockerfile  README.md  pyproject.toml
services/ingestion/app/: audio.py  config.py  main.py  queue.py  storage.py  youtube.py
services/ingestion/app/templates/: index.html
services/ingestion/tests/: conftest.py  test_audio.py  test_config.py  test_endpoint.py  test_queue.py  test_storage.py  test_youtube.py
services/knowledge-api/: Dockerfile  README.md  main.py  pyproject.toml
services/knowledge-api/app/: config.py  db.py  embed.py  entity_resolve.py  graph.py  models.py  planner.py  retrieve.py  synthesis.py
services/knowledge-api/app/routes/: facts.py  query.py  stats.py
services/knowledge-api/app/templates/: index.html
services/knowledge-api/tests/: conftest.py  test_db_integration.py  test_db_unit.py  test_embed.py  test_entity_resolve.py  test_graph.py  test_lifespan.py  test_planner.py  test_retrieve.py  test_routes.py  test_synthesis.py
services/transcription/: Dockerfile  README.md  pyproject.toml
services/transcription/app/: config.py  diarize.py  merge.py  pipeline.py  queue.py  storage.py  transcribe.py  worker.py
services/transcription/tests/: test_config.py  test_diarize.py  test_merge.py  test_pipeline.py  test_queue.py  test_storage.py  test_transcribe.py  test_worker.py
shared/schemas/: pyproject.toml
shared/schemas/sediment_schemas/: __init__.py  ingestion.py  transcription.py
shared/schemas/tests/: test_ingestion_message.py  test_transcription_message.py
