[project]
name = "ingestion"
version = "0.1.0"
description = "Sediment ingestion service: audio/YouTube intake → normalize → MinIO → Redis queue."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "minio>=7.2",
    "redis>=5.0",
    "yt-dlp>=2024.4.9",
    "pydantic-settings>=2.2",
    "sediment-schemas",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv.sources]
sediment-schemas = { path = "../../shared/schemas", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
