[project]
name = "knowledge-api"
version = "0.1.0"
description = "Sediment knowledge API: semantic search over fact_chunks."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "google-genai>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "neo4j>=5.0",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
markers = ["integration: requires live postgres; run with compose stack up"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
