[project]
name = "transcription"
version = "0.1.0"
description = "Sediment transcription service: dequeue audio → faster-whisper + pyannote → speaker-labeled transcript → MinIO + queue."
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0",
    "pyannote.audio>=3.3",
    "minio>=7.2",
    "redis>=5.0",
    "pydantic-settings>=2.2",
    "sediment-schemas",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
sediment-schemas = { path = "../../shared/schemas", editable = true }

[tool.pytest.ini_options]
markers = ["slow: real model inference; deselect with -m 'not slow'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
