[project]
name = "sediment-schemas"
version = "0.1.0"
description = "Shared Pydantic schemas — the inter-service contract for Sediment."
requires-python = ">=3.12"
dependencies = ["pydantic>=2.6"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sediment_schemas"]
